kubernetes/workloads/platform/identity/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/managed-by: flux
